--- a/src/Components/footer/Footer.css
+++ b/src/Components/footer/Footer.css
@@ -5,6 +5,21 @@ footer {
     background-repeat: no-repeat;
 }
 
+footer p,
+a,
+span {
+    color: rgba(128, 128, 128, 1);
+}
+
+footer i {
+    color: rgba(242, 24, 79, 1);
+}
+
+footer h4,
+h5 {
+    color: white;
+}
+
 .footer-overlay {
     position: absolute;
     top: 0;
@@ -14,31 +29,38 @@ footer {
     background: rgba(0, 0, 0, .8);
 }
 
+.footer-over-view {
+    position: relative;
+}
+
 .adress img {
     width: 80%;
 }
 
-.adress p {
+
+/* .adress p {
     color: rgba(128, 128, 128, 1);
-}
+} */
 
 .adress ul li {
     padding-top: 10px;
 }
 
 .adress ul li a {
-    color: rgba(128, 128, 128, 1);
+    /* color: rgba(128, 128, 128, 1); */
     font-size: 13px;
 }
 
 .adress ul li i {
-    color: rgba(242, 24, 79, 1);
+    /* color: rgba(242, 24, 79, 1); */
     margin-right: 10px;
 }
 
+
+/* 
 .useful-links h4 {
     color: white;
-}
+} */
 
 .useful-links ul li {
     padding-top: 10px;
@@ -47,32 +69,33 @@ footer {
 }
 
 .useful-links ul li a {
-    color: rgba(128, 128, 128, 1);
+    /* color: rgba(128, 128, 128, 1); */
     font-size: 14px;
 }
 
-.twitter-feed h4 {
+
+/* .twitter-feed h4 {
     color: white;
-}
+} */
 
 .twitter-feed ul li {
     padding-top: 10px;
 }
 
 .twitter-feed ul li i {
-    color: rgba(242, 24, 79, 1);
+    /* color: rgba(242, 24, 79, 1); */
     margin-right: 10px;
 }
 
 .twitter-feed ul li a,
 span,
 p {
-    color: rgba(128, 128, 128, 1);
+    /* color: rgba(128, 128, 128, 1); */
     font-size: 14px;
 }
 
 .opening-hours h4 {
-    color: white;
+    /* color: white; */
     padding-bottom: 10px;
 }
 
@@ -84,6 +107,22 @@ hr {
     border: 1px solid rgba(255, 255, 255, 1);
 }
 
-.call-us h5 {
+
+/* .call-us h5 {
+    color: white;
+} */
+
+
+/* .call-us ul li a {
+    color: rgba(128, 128, 128, 1);
+} */
+
+.contact-us ul li i {
+    color: rgba(128, 128, 128, 1);
+    font-size: 20px;
+}
+
+.subscribe-btn {
+    background: rgba(242, 24, 79, 1);
     color: white;
 }
