--- a/src/Components/latest/Latest.css
+++ b/src/Components/latest/Latest.css
@@ -8,6 +8,7 @@
 
 .latest-header span {
     color: rgba(230, 46, 77, 1);
+    font-size: inherit;
 }
 
 
@@ -16,7 +17,7 @@
 .social-container {
     background: rgba(32, 44, 69, 0.9);
     width: 20%;
-    height: 59%;
+    height: 55.5%;
     top: 0;
     position: absolute;
     right: 15px;
